--- a/public/css/events.css
+++ b/public/css/events.css
@@ -60,6 +60,7 @@
 	border-radius: 3px;
 	color: rgb(76, 76, 76); 
 	font-size: 13px;
+	cursor: pointer;
 }
 .guestsWrap > span{
     margin-right: 2px;
