--- a/public/css/manage.css
+++ b/public/css/manage.css
@@ -95,8 +95,8 @@
     margin-right:15px;
     text-align:right;
     display:inline-block;
-    position: relative;
-    top: -1px;
+    clear: both;
+    float: left;
 }
 
 .a-desc{
