--- a/public/css/style.css
+++ b/public/css/style.css
@@ -409,10 +409,12 @@ top: 33px;
 	text-transform: uppercase;
 	font-size: 10px;
 }
+.themeBtnMain{
+	width:100px!important;
+}
 .themeBtn,
 .themeBtnToggle
 {
-	width: 100px!important;
 	max-width: 210px;
 	height: 31px;
 	border-radius: 2px;
@@ -1253,9 +1255,14 @@ margin: 20px 0 20px;
 	border-top: 1px solid #D84343;
 	border-bottom: 1px solid #D84343;
 	margin: auto;
+	margin-top: 30px;
 }
 .center-heading{
 	text-align: center;
 	margin-bottom: 10px;
 }
 
+::selection{
+	background: rgb(199, 42, 42);
+	color:white;
+}
