--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -38,6 +38,7 @@
 	border: none;
 	border-radius: 0;
 	font: normal 1.1em 'Lato'!important;
+	position: relative;
 }
 .chatLine{
 	padding: 0 30px;
@@ -146,9 +147,9 @@ background: white;
 /* ----------  FRIENDS  ----------*/
 
 #friendListWrap{
-	text-align:center;
+	text-align:center; 
 	padding-top:10px;
-	top: -126px;
+	top: -130px;
 	overflow: visible;
 	z-index: 10;
 }
@@ -166,7 +167,7 @@ background: white;
 .f-item{
 	margin: 7px 0;
 	width: 102.2%;
-	padding-left: 7px;
+	padding-left: 9px;
 	box-sizing: border-box;
 	background: white;
 	border: 1px solid #ccc;
@@ -215,4 +216,31 @@ button.isHosting{
 .f-img{
 	display:inline-block;
 	margin-top:2px;
+}
+.closeChat{
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  color: #808080;
+  background: white;
+  padding: 4px;
+  border: 1px solid #ccc;
+}
+
+.liveTypeWrap{
+  position: absolute;
+  top: -22px;
+  opacity: 0;
+}
+
+.liveTypeWrap > span{
+  font-size: 10px;
+  color: #ccc;
+  margin-left: 17px;
+}
+
+.liveTypeWrap > img{
+  position: relative;
+  top: 1px;
+  left: 4px;
 }
