--- a/public/css/fontello/css/fontello.css
+++ b/public/css/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?33798794');
-  src: url('../font/fontello.eot?33798794#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?33798794') format('woff'),
-       url('../font/fontello.ttf?33798794') format('truetype'),
-       url('../font/fontello.svg?33798794#fontello') format('svg');
+  src: url('../font/fontello.eot?27034933');
+  src: url('../font/fontello.eot?27034933#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?27034933') format('woff'),
+       url('../font/fontello.ttf?27034933') format('truetype'),
+       url('../font/fontello.svg?27034933#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?33798794#fontello') format('svg');
+    src: url('../font/fontello.svg?27034933#fontello') format('svg');
   }
 }
 */
@@ -88,3 +88,10 @@
 .icon-forward-1:before { content: '\e823'; } /* '' */
 .icon-male:before { content: '\e824'; } /* '' */
 .icon-female:before { content: '\e825'; } /* '' */
+.icon-down-dir:before { content: '\e826'; } /* '' */
+.icon-left-dir:before { content: '\e827'; } /* '' */
+.icon-right-dir:before { content: '\e828'; } /* '' */
+.icon-arrows-cw:before { content: '\e829'; } /* '' */
+.icon-circle:before { content: '\e82a'; } /* '' */
+.icon-circle-empty:before { content: '\e82b'; } /* '' */
+.icon-circle-thin:before { content: '\e82c'; } /* '' */
