--- a/views/index.html
+++ b/views/index.html
@@ -326,6 +326,10 @@
 						<input id="eventMaxGuest" class="input-field_create" value = "3" max="100" min="2" type="number">
 					</div>
 					<div class="input-row-wrap">
+						<label for="event-friends-wrap">Ils y seront </label>
+						<div class="event-friends-wrap"</div>
+					</div>
+					<div class="input-row-wrap">
 						<label for="tags">Tags</label>
 						<div class="tags-wrap"></div>
 					</div>
