--- a/views/index.html
+++ b/views/index.html
@@ -271,6 +271,7 @@
 					<div class="input-row-wrap">
 						<label class="labelTextArea" for="description">What's up?</label>
 						<textarea id="description" class="profileInput" placeholder="Tell the world what you like"></textarea>
+						<div class="action inspire">En manque d'inspi?</div>
 					</div>
 				</div>
 				</div>
@@ -364,7 +365,7 @@
 				<div id="searchBarWrap">
 					<div id="searchBar">
 						<i class="icon icon-search"></i>
-					   <input type="text" placeholder="Search by name, age or drink">
+					   <input type="text" placeholder="Rechercher par nom, age, boisson favorite">
 					</div>
 				</div>
 				<div id="searchUsers"> <!-- Content dynamicall loaded --> </div>
