--- a/views/welcomeEmail.html
+++ b/views/welcomeEmail.html
@@ -912,8 +912,8 @@ body,.wrapper,.emb-editor-canvas{background-color:#fbfaf1}.border{background-col
                         <table class="contents">
                           <tr>
                             <td class="padded">
-                              <h1>Bienvenue {{name}}</h1>
-                                <p>Votre inscription sur le *meilleur* site de soirée au monde a bien été prise en compte.
+                              <h1>{{name}},</h1>
+                                <p>Ton inscription sur le *meilleur* site de soirée au monde a bien été prise en compte.
                                   Les soirées galères, c'est terminé. Voilà les prochaines étapes pour toi :</p>
                                   <ul>
                                   <li>Parle en à tes ami afin de les ajouter à ta team</li>
