--- a/views/index.html
+++ b/views/index.html
@@ -416,6 +416,7 @@
 		</div>
 		<script src="//js.pusher.com/2.2/pusher.min.js"></script>
 		<script src="dist/lib.min.js"></script>
+		<script src="js/lib/moment.min.js"></script>
 		
 		<!-- custom scripts -->
 		<script src="js/lj-params.js"></script>
