filter in bot panel

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -124,4 +124,18 @@
 	cursor:pointer;
 }
 
+#botbarre div{
+    display: inline-block;
+
+    border: 1px solid #ccc;
+    padding: 5px;
+    margin: 0 3px;
+    border-radius: 2px;
+}
+#botbarre div.active{
+	background-color:#F0F0F0; 
+}
+#botBarre i{
+
+}
 
