--- a/public/css/style.css
+++ b/public/css/style.css
@@ -718,10 +718,9 @@ input[type="radio"] + span{
 	display: inline-block;
 }
 .action{
-	font-size: .75em;
+	font-size: 12px;
 	margin-left: 10px;
 	transition: all .7s;
-	font-family: 'Lato';
 	position: relative;
 	top: -2px;
 }
@@ -1258,6 +1257,7 @@ p{
 color: #777777;
 line-height: 24px;
 margin: 20px 0 20px;
+font-family: 'Karla','Lato';    letter-spacing: -.5px;
 }
 .center-line{
 	display: inline-block;
