--- a/views/index.html
+++ b/views/index.html
@@ -56,7 +56,7 @@
 			<li id="create" class="menu-item icon icon-plus" data-linkedcontent="#createEventWrap"><span class="underlay"></span></li>
 			<li id="management" class="menu-item icon icon-users" data-linkedcontent="#manageEventsWrap" ><span class="underlay"></span></li>
 			<li id="settings" class="right menu-item icon icon-cog" data-linkedcontent="#settingsWrap" ><span class="underlay"></span></li>
-			<li id="contact" class="right menu-item icon icon-mail-alt" data-linkedcontent="#contactWrap" ><span class="underlay"></span></li>
+			<li id="contact" class="right menu-item icon icon-mail-alt nonei" data-linkedcontent="#contactWrap" ><span class="underlay"></span></li>
 		  </ul>
 	  </div>
 	  <div class="sm-header none">
@@ -358,7 +358,7 @@
 				</div>
 			</section>
 			<section id="searchUsersWrap" class="none centered">
-				<h2>Ajoute tes amis</h2>
+				<h2>Team de soirée</h2>
 				<div class="actionsWrap actionsStyle">
 					<span id="friendsOnly" class="action">Amis uniquement</span>
 				</div>
