--- a/views/index.html
+++ b/views/index.html
@@ -246,27 +246,8 @@
 						<label for="age">Age</label>
 						<input id="age" class="profileInput" placeholder="25" type="number" max="50" min="18">
 					</div>
-					<div class="input-row-wrap">
-						<label for="favoriteDrink">Ton verre</label>
-						<div id="favoriteDrink">
-							<div class="drink" data-drink="water">water</div>
-							<div class="drink" data-drink="soft">soft</div>
-							<div class="drink" data-drink="hard">hard</div>
-							<div class="drink" data-drink="shots">shots</div>
-							<div class="drink" data-drink="wine">wine</div>
-							<div class="drink" data-drink="kro">kro</div>
-						</div>
-					</div>
-					<div class="input-row-wrap split">
-						<label for="mood">Humeur du jour</label>
-						<div id="mood">
-							<div class="mood" data-mood="whatever">whatever</div>
-							<div class="mood" data-mood="tired">tired</div>
-							<div class="mood" data-mood="drunk">still drunk</div>
-							<div class="mood" data-mood="happy">happy</div>
-							<div class="mood" data-mood="fail">fail</div>
-							<div class="mood" data-mood="fired">on fire</div>
-						</div>
+					<div class="input-profile-rows">
+							<!-- Dynamically loaded -->
 					</div>
 					<div class="input-row-wrap">
 						<label class="labelTextArea" for="description">What's up?</label>
