--- a/public/css/fontello/css/fontello-codes.css
+++ b/public/css/fontello/css/fontello-codes.css
@@ -44,3 +44,4 @@
 .icon-circle:before { content: '\e82a'; } /* '' */
 .icon-circle-empty:before { content: '\e82b'; } /* '' */
 .icon-circle-thin:before { content: '\e82c'; } /* '' */
+.icon-moon:before { content: '\e82d'; } /* '' */
