--- a/views/index.html
+++ b/views/index.html
@@ -71,18 +71,17 @@
 	<!-- Landing page start -->
 		<section id="landingWrap" class="centered revealed m-revealed">
 			<div class="landing-content">
-				<h2 class="landing-places"> Meefore sera de retour fin juin..
+				<h2 class="landing-places">
 					<span class="typed-text"></span>
 				</h2>
 				<div class="landing-hashtags">
 					<!-- Dynamically loaded -->
 				</div>
 				<div class="landing-call etiquette">
-				Merci à tous pour vos feedback, la beta est terminée!
-					
+					"Une vraie soirée commence toujours avant la soirée."
 				</div>
 				<div class="landing-subscribe">
-					 <div id="facebook_connect"><i class="icon icon-facebook"></i>Groupe facebook</div>
+					 <div id="facebook_connect"><i class="icon icon-facebook"></i>Connexion</div>
 				</div>
 			</div>
 		</section>
@@ -351,7 +350,7 @@
                 }
             });
 
-        })//();
+        })();
         </script>
 
 		<!-- custom scripts -->
